# Trading-Bot

./: .gitignore  Cargo.toml  INSTALL.md  README.md  TRANSFER_TO_NEW_LAPTOP.md  VERSION_HISTORY.md  run_paper_trader.py  run_server.py
agents/: _firm_state.json  agent_flow_spec.py  api_server.py  aplus_setup.py  benchmark_llms.py  config.py  db_explorer.py  desk_context.py  dry_run_agents.py  features.py  graph.py  llm_local.py  llm_openrouter.py  llm_providers.py  llm_retry.py  options_math.py  parse_llm_json.py  position_monitor.py  reflex_llm.py  requirements.txt  sample_agent_prompts.py  schemas.py  sentiment_monitor_llm.py  state.py  state_persistence.py  technicals.py  tier3_context.py  tiers.py  token_smoke_test.py
config/: settings.toml
core/: Cargo.toml
core/src/: circuit_breaker.rs  feed_handler.rs  greeks.rs  main.rs  ring_buffer.rs  shm_bridge.rs
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONFIG.md  DATA_FLOW.md  DECISION_INPUTS.md  END_TO_END_DRY_RUN.md  OPERATIONS.md  README.md  TECHNICAL_CONTEXT.md  TROUBLESHOOTING.md  UI.md  WORKFLOWS.md  agent-transcript.md
scripts/: auto_push.sh  export_cursor_bundle.sh  zip_transfer_bundle.sh
trading-viz/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/: index-v0.2.2-pre-orchard-layout.html  index-v0.2.2-pre-v4-hud.html  index-v0.2.3-pre-starshipos.html  index-v0.2.4-pre-controlroom.html  index-v0.2.5-pre-atlas.html  index.html  index.snapshot.html  package-lock.json  package.json  (+2 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
(+108 files in other folders)
