[workspace]

[package]
name    = "trading-terminal-ui"
version = "0.2.5"
edition = "2021"

[lib]
name       = "trading_terminal_ui"
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
